Fix overflow of content to the right of the navbar

--- a/src/main/content/antora_ui/src/css/doc.css
+++ b/src/main/content/antora_ui/src/css/doc.css
@@ -44,6 +44,10 @@
   letter-spacing: 0;
 }
 
+.doc .sect2 {
+  overflow-x: scroll;
+}
+
 #preamble + .sect1,
 .doc .sect1 + .sect1 {
   margin-top: 2rem;
